# llmsh

./: .gitignore  Cargo.toml  README.md
src/: job_control.rs  main.rs
src/config/: mod.rs
src/llm/: api_client.rs  context_manager.rs  mod.rs
src/shell/: alias.rs  command_parser.rs  command_processor.rs  documentation.rs  executor.rs  job_control.rs  mod.rs  shell_env.rs  signal_handler.rs  suggestions.rs
src/system/: installer.rs  login.rs  mod.rs
src/terminal/: completion.rs  history.rs  mod.rs
src/utils/: mod.rs  path_utils.rs  performance.rs
