[package]
name = "llm-shell"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
nix = "0.26"
rustyline = "11.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
shellwords = "1.1"
colored = "2.0"
fuzzy-matcher = "0.3"
async-recursion = "1.0"
regex = "1.5"
lazy_static = "1.4"
libc = "0.2"
hostname = "0.3"